# fastapi-learn

./: .env  .env.example  .gitignore  main.py  pyproject.toml
app/: alembic.ini  config.py  main.py
app/api/: auth.py
app/api/v1/endpoints.py/: user.py
app/core/: __init__.py  config.py  database.py  lifespan.py  logger.py  middleware.py  oauth2.py  redis.py
app/exceptions/: base.py  handlers.py
app/middlewares/: request_id.py
app/models/: __init__.py  base.py  user.py
app/repositories/: user.py
app/schemas/: user.py
app/services/: user.py
