[project]
name = "fastapi-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.8",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]
